<resources>
    <string name="app_name">IMSV</string>
    <string name="page_number_format">%1\$d/%2\$d</string>
    <string name="left_arrow">Left arrow</string>
    <string name="right_arrow">Right arrow</string>

    <!--Activity Main-->
    <string name="activity_main_image_info_icon">Icon that when pressed takes you to the section \'Info\'</string>

    <!--Bottom nav-->
    <string name="bottom_nav_menu_home">Home</string>
    <string name="bottom_nav_menu_games">Games</string>
    <string name="bottom_nav_menu_quote">Quote</string>

    <!--Home-->
    <string name="fragment_home_card_envelope_image">Letter envelope before being opened</string>

    <!--Games-->
    <string name="fragment_games_game_banner">Banner for each game</string>

    <!--Quiz Menu-->
    <string name="fragment_quiz_menu_select_difficulty">Select the difficulty</string>
    <string name="fragment_quiz_menu_difficulty_easy">Easy</string>
    <string name="fragment_quiz_menu_difficulty_normal">Normal</string>
    <string name="fragment_quiz_menu_difficulty_hard">Hard</string>
    <string name="fragment_quiz_menu_difficulty_expert">Expert</string>
    <string name="fragment_quiz_menu_title_easy">Easy</string>
    <string name="fragment_quiz_menu_title_normal">Normal</string>
    <string name="fragment_quiz_menu_title_hard">Hard</string>
    <string name="fragment_quiz_menu_title_expert">Expert</string>
    <string name="fragment_quiz_menu_explanation_easy">Let\'s start with something gentle! Here are 10 easy random questions. You have 30 seconds to answer each one. If you fail, 10 seconds will be subtracted. If time runs out, you lose.</string>
    <string name="fragment_quiz_menu_explanation_normal">Here we start to warm up our engines! Answer 10 easy questions and another 5 a little more intense. You have 25 seconds to answer each one, if you fail, 10 seconds will be subtracted. If time runs out, you lose.</string>
    <string name="fragment_quiz_menu_explanation_hard">Get ready! This level is more challenging. You will answer 10 easy questions, 6 normal and 4 difficult questions. You have 20 seconds for each one; on failure, 12 seconds will be subtracted. Get ready to think something like \"WHY AM I SUPPOSED TO KNOW THAT?\"</string>
    <string name="fragment_quiz_menu_explanation_expert">Here\'s a real challenge for you! Will you be able to answer ALL the questions correctly without failing any of them? You have It\'s your time to shine!</string>

    <!--Quiz-->
    <string name="fragment_quiz_response_image_a">Icon response A</string>
    <string name="fragment_quiz_response_image_b">Icon response B</string>
    <string name="fragment_quiz_response_image_c">Icon response C</string>
    <string name="fragment_quiz_response_image_d">Icon response D</string>

    <!--Card Menu-->
    <string name="fragment_card_menu_select_board_type">Select the board type</string>
    <string name="fragment_card_menu_3x4">3x4</string>
    <string name="fragment_card_menu_4x5">4x5</string>
    <string name="fragment_card_menu_5x6">5x6</string>
    <string name="fragment_card_menu_6x7">6x7</string>
    <string name="fragment_card_menu_adjust_speed">Adjust the speed</string>
    <string name="fragment_card_menu_slow">Slow</string>
    <string name="fragment_card_menu_fast">Fast</string>
    <string name="fragment_card_menu_flipped_card_indicator">Flipped card indicator</string>
    <string name="fragment_card_menu_toast_board_size">Select the board size</string>
    <string name="fragment_card_menu_toast_adjust_speed">Adjust the speed of the board</string>
    <string name="fragment_card_menu_start">Start</string>

    <!--Card-->
    <string name="fragment_card_card_image">Frontal and back part of a card</string>
    <string name="fragment_card_undiscovered_image_question_mark">Question mark indicative of whether the game card has been flipped</string>

    <!--Puzzle Menu-->
    <string name="fragment_puzzle_menu_select_puzzle">Select de puzzle</string>
    <string name="fragment_puzzle_menu_padlock_image">Puzzle padlock indicating if available</string>

    <!--Puzzle-->
    <string name="fragment_puzzle_image_puzzle">Descriptive image of the current puzzle</string>
    <string name="fragment_puzzle_hint_response_text">Answer…</string>
    <string name="fragment_puzzle_image_check">Check button to confirm the answer</string>


    <!--Would He Rather Menu-->
    <string name="fragment_would_he_rather_menu_select_category">Select the category</string>
    <string name="fragment_would_he_rather_menu_category1">Category 1</string>
    <string name="fragment_would_he_rather_menu_category2">Category 2</string>
    <string name="fragment_would_he_rather_menu_category3">Category 3</string>
    <string name="fragment_would_he_rather_menu_category4">Category 4</string>
    <string name="fragment_would_he_rather_menu_category5">Category 5</string>
    <string name="fragment_would_he_rather_menu_mixed">Mixed</string>
    <string name="fragment_would_he_rather_menu_response_time">Select the response time</string>
    <string name="fragment_would_he_rather_menu_fast">Fast\n(10s)</string>
    <string name="fragment_would_he_rather_menu_medium">Medium\n(15s)</string>
    <string name="fragment_would_he_rather_menu_slow">Slow\n(20s)</string>
    <string name="fragment_would_he_rather_menu_select_difficulty">Select the difficulty</string>
    <string name="fragment_would_he_rather_menu_difficulty_description_text_casual">Casual: If you fail there is no penalty.</string>
    <string name="fragment_would_he_rather_menu_difficulty_description_text_challenge">Challenge: If you fail you lose the game.</string>
    <string name="fragment_would_he_rather_menu_toast_select_response_time">Select the response time</string>
    <string name="fragment_would_he_rather_menu_toast_select_category">Select the category</string>
    <string name="fragment_would_he_rather_menu_start">Start</string>

    <!--Info-->
    <string name="fragment_info_character_image">Image of the character who speaks to you</string>
    <string name="fragment_info_textbox_image">Textbox where the character text goes</string>

    <!--Final screen-->
    <string name="fragment_final_screen_lose_main_text">You Lose</string>
    <string name="fragment_final_screen_lose_secondary_text">I wish you luck for next time.</string>
    <string name="fragment_final_screen_win_quiz_main_text">¡Congratulations!</string>
    <string name="fragment_final_screen_win_quiz_secondary_text">You managed to answer all the questions.</string>
    <string name="fragment_final_screen_win_memory_card_main_text">¡Completed pairs!</string>
    <string name="fragment_final_screen_win_memory_card_secondary_text">It took you %1$s min.</string>
    <string name="fragment_final_screen_win_puzle_main_text">¡Correct!</string>
    <string name="fragment_final_screen_win_puzzle_secondary_text">It took you %1$s min.</string>
    <string name="fragment_final_screen_win_whr_main_text">¡Congratulations!</string>
    <string name="fragment_final_screen_win_whr_secondary_text">You have completed the \'Would you rather?\'.</string>
    <string name="fragment_final_screen_press_to_return">Click to return to the menu</string>

</resources>